# ssn-scan

./: Cargo.toml  README.md
src/: gui.rs  lib.rs  main.rs
test/: test.txt  test2.txt  test3.txt
