[package]
name = "ssn-scan"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicli = "0.4.0"
structopt = { version = "0.3", default-features = false }
walkdir = "2"
regex = "1"
web-view = "0.7.3"
tinyfiledialogs = "3.9.0"